<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/date_hint"
            android:imeOptions="actionDone"
            android:inputType="textCapWords|textAutoCorrect|textNoSuggestions"
            android:minHeight="48dp"
            android:privateImeOptions="nm" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/name_hint"
            android:imeOptions="actionDone"
            android:inputType="textCapWords|textPersonName|textNoSuggestions"
            android:minHeight="48dp"
            android:privateImeOptions="nm" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/phone_hint"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/table_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#ADD8E6"
            android:minHeight="48dp"
            android:text="@string/book_button" />

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#ADD8E6"
            android:minHeight="48dp"
            android:text="@string/booking_menu_button" />

    </LinearLayout>
</LinearLayout>
